--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <nav >
+      <nav id="nav1" >
         <div class="container">
           <div class="row">
             <div class="col-3">
@@ -358,6 +358,18 @@
         <!-- END GRID -->
         </div> 
         </div>
+      </section>
+      <section id="wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="wrapper_img">
+
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
 
