#some bug fixed

--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fiorello – A Flower Shop and Florist WooCommerce Theme</title>
+    <title>Contact Us – Fiorello</title>8
     <link rel="stylesheet" href="../src/scss/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
