--- a/public/productlist.html
+++ b/public/productlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us – Fiorello</title>8
+    <title>Products – Fiorello</title>
     <link rel="stylesheet" href="../src/scss/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -71,7 +71,7 @@
                           <div class="col-lg-3">
                             <ul>
                               <p>Product Types</p>
-                              <li><a href="./productlist.html">Standard Product</a></li>
+                              <li><a href="./productcheck.html">Standard Product</a></li>
                               <li><a href="#">Grouped Product</a></li>
                               <li><a href="#">Variable Product</a></li>
                               <li><a href="#">Virtual Product</a></li>
@@ -95,7 +95,7 @@
                           <div class="col-lg-3">
                             <ul>
                               <p>Product List</p>
-                              <li><a href="#">Without Sidebar</a></li>
+                              <li><a href="./productlist.html">Product List</a></li>
                               <li><a href="#">With Category Filter</a></li>
                               <li><a href="#">With Ordering Filter</a></li>
                               <li><a href="#">Shop Carousel</a></li>
