--- a/public/contact.html
+++ b/public/contact.html
@@ -71,7 +71,7 @@
                           <div class="col-lg-3">
                             <ul>
                               <p>Product Types</p>
-                              <li><a href="./productlist.html">Standard Product</a></li>
+                              <li><a href="./productcheck.html">Standard Product</a></li>
                               <li><a href="#">Grouped Product</a></li>
                               <li><a href="#">Variable Product</a></li>
                               <li><a href="#">Virtual Product</a></li>
@@ -95,7 +95,7 @@
                           <div class="col-lg-3">
                             <ul>
                               <p>Product List</p>
-                              <li><a href="#">Without Sidebar</a></li>
+                              <li><a href="./productlist.html">Product List</a></li>
                               <li><a href="#">With Category Filter</a></li>
                               <li><a href="#">With Ordering Filter</a></li>
                               <li><a href="#">Shop Carousel</a></li>
